fixed spacing for pet cards

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,33 +1,10 @@
-.resizable-image1 {
+.resizable-image-1 {
     width: 300px;
-    height: 200px;
 }
 
-.resizable-image2 {
+.resizable-image-2 {
     width: 90px;
     height: 90px;
-}
-
-.resizable-image3 {
-    width: 90px;
-    height: 90px;
-}
-
-.resizable-image4 {
-    width: 90px;
-    height: 90px;
-}
-
-.resizable-image5 {
-    width: 90px;
-    height: 90px;
-}
-
-.flex-container1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 200px;
 }
 
 .flex-item{
